prevent ghost sections on mobile

--- a/frontend/src/components/schedule/schedule.module.css
+++ b/frontend/src/components/schedule/schedule.module.css
@@ -135,4 +135,7 @@
   .daysContainer {
     height: 3em;
   }
+  .ghostBlock {
+    opacity: 1;
+  }
 }
